deploy/applications/accounts/kustomize/overlays/aws-kubeadm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accounts
  labels:
    app.kubernetes.io/name: accounts
    app.kubernetes.io/part-of: devops-capstone
