deploy/applications/accounts/kustomize/overlays/aws-kubeadm/postgres-storage-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: postgresql
      volumes:
        - name: postgresql-data
          emptyDir: null
          persistentVolumeClaim:
            claimName: postgresql-data
